--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^4.5.1",
+    "@fontsource/overpass": "^4.5.1",
     "mongodb": "^3.7.1",
     "mongoose": "^6.1.2",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
+    "node-fetch": "^3.1.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
