--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
