--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/overpass": "^4.5.1",
     "mongodb": "^3.7.1",
     "mongoose": "^6.1.2",
-    "next": "12.0.4",
+    "next": ">=12.0.9",
     "next-auth": "^3.29.0",
     "node-fetch": "^3.1.0",
     "nprogress": "^0.2.0",
