--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fontsource/montserrat": "^4.5.1",
     "@fontsource/overpass": "^4.5.1",
+    "formik": "^2.2.9",
     "mongodb": "^3.7.1",
     "mongoose": "^6.1.2",
     "next": ">=12.0.9",
